fix contacts on safari

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1570,7 +1570,7 @@ html, body {
 }
 .contacts__address .contacts__image img {
   object-fit: cover;
-  height: 100%;
+  width: 100%;
   filter: grayscale(100%);
 }
 .contacts__address .contacts__info {
