--- a/public/sass/blocks/_contacts.sass
+++ b/public/sass/blocks/_contacts.sass
@@ -146,7 +146,7 @@
         .contacts__image
             img
                 object-fit: cover
-                height: 100%
+                width: 100%
                 filter: grayscale(100%)
             
         .contacts__info
